--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
     <properties>
         <snapshot.version>HEAD-SNAPSHOT</snapshot.version>
         <next.release.version>1.0.0-RC1</next.release.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -86,10 +86,10 @@
         <maven.gwt.plugin>1.1.0</maven.gwt.plugin>
 
         <jackson.version>2.16.0</jackson.version>
-        <elemental2.version>1.2.1</elemental2.version>
+        <elemental2.version>1.2.3</elemental2.version>
         <gwt.i18n.version>1.0.2</gwt.i18n.version>
 
-        <domino.history.version>HEAD-SNAPSHOT</domino.history.version>
+        <domino.history.version>1.0.4</domino.history.version>
         <domino.ui.version>HEAD-SNAPSHOT</domino.ui.version>
         <domino.auto.version>1.0.2</domino.auto.version>
         <dagger.version>2.51.1</dagger.version>
@@ -100,7 +100,7 @@
             <dependency>
                 <groupId>org.gwtproject</groupId>
                 <artifactId>gwt</artifactId>
-                <version>2.11.0</version>
+                <version>2.12.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
