--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
         <gwt.i18n.version>1.0.2</gwt.i18n.version>
 
         <domino.history.version>1.0.4</domino.history.version>
-        <domino.ui.version>HEAD-SNAPSHOT</domino.ui.version>
+        <domino.ui.version>2.0.3</domino.ui.version>
         <domino.auto.version>1.0.2</domino.auto.version>
         <dagger.version>2.51.1</dagger.version>
     </properties>
