--- a/domino-brix-processor/pom.xml
+++ b/domino-brix-processor/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.dominokit</groupId>
         <artifactId>domino-brix</artifactId>
-        <version>1.0.0-RC1</version>
+        <version>HEAD-SNAPSHOT</version>
     </parent>
 
     <artifactId>domino-brix-processor</artifactId>
