--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,15 +22,15 @@ on:
 
 jobs:
   verify:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         java-version: [ 11 , 17 , 21 ]
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Java and Maven
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'temurin'
@@ -38,25 +38,27 @@ jobs:
 
   release:
     needs: verify
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Java and Maven
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: 11
           distribution: 'temurin'
-          server-id: ossrh
-          server-username: SONATYPE_USERNAME
-          server-password: SONATYPE_PASSWORD
-      - id: install-secret-key
-        name: Install gpg secret key
+          cache: maven
+          server-id: 'central'
+          server-username: CENTRAL_USER
+          server-password: CENTRAL_TOKEN
+      - name: Import GPG key
         run: |
-          cat <(echo -e "${{ secrets.gpg_private_key }}") | gpg --batch --import
-      - name: publish
-        run: mvn --no-transfer-progress clean deploy -B -e -Dci=true -Dgpg.passphrase=${{ secrets.gpg_passphrase }}
+          echo "${{ secrets.gpg_private_key }}" | gpg --batch --import
         env:
-          SONATYPE_USERNAME: ${{ secrets.nexus_username }}
-          SONATYPE_PASSWORD: ${{ secrets.nexus_password }}
+          GPG_TTY: $(tty)
+      - name: Deploy with Maven
+        run: ./mvnw --no-transfer-progress clean deploy -B -e -Dci=true -Dgpg.passphrase=${{ secrets.gpg_passphrase }}
+        env:
+          CENTRAL_USER: ${{ secrets.CENTRAL_USER }}
+          CENTRAL_TOKEN: ${{ secrets.CENTRAL_TOKEN }}
