--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.dominokit</groupId>
     <artifactId>domino-brix</artifactId>
-    <version>1.0.0-RC1</version>
+    <version>HEAD-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>domino-brix</name>
@@ -48,17 +48,6 @@
         <url>https://github.com/DominoKit/domino-brix</url>
     </scm>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
     <modules>
         <module>domino-brix-client</module>
         <module>domino-brix-processor</module>
@@ -67,7 +56,7 @@
 
     <properties>
         <snapshot.version>HEAD-SNAPSHOT</snapshot.version>
-        <next.release.version>1.0.0-RC1</next.release.version>
+        <next.release.version>1.0.0-RC2</next.release.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -79,7 +68,7 @@
         <maven.gpg.plugin>1.6</maven.gpg.plugin>
         <maven.nexus.staging.plugin>1.6.8</maven.nexus.staging.plugin>
         <maven.deploy.plugin>3.0.0-M1</maven.deploy.plugin>
-        <maven.fmt.plugin>2.9</maven.fmt.plugin>
+        <maven.fmt.plugin>2.43.0</maven.fmt.plugin>
         <maven.install.plugin>3.0.0-M1</maven.install.plugin>
         <maven.license.plugin>3.0</maven.license.plugin>
         <maven.surfire.plugin>3.0.0-M1</maven.surfire.plugin>
@@ -90,7 +79,7 @@
         <gwt.i18n.version>1.0.2</gwt.i18n.version>
 
         <domino.history.version>1.0.4</domino.history.version>
-        <domino.ui.version>2.0.3</domino.ui.version>
+        <domino.ui.version>2.1.0</domino.ui.version>
         <domino.auto.version>1.0.2</domino.auto.version>
         <dagger.version>2.51.1</dagger.version>
     </properties>
@@ -214,11 +203,23 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.coveo</groupId>
-                <artifactId>fmt-maven-plugin</artifactId>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
                 <version>${maven.fmt.plugin}</version>
+
+                <configuration>
+                    <java>
+                        <!-- Use Google Java Format, but modern & JPMS-safe -->
+                        <googleJavaFormat>
+                            <version>1.22.0</version>
+                        </googleJavaFormat>
+                    </java>
+                </configuration>
+
                 <executions>
+                    <!-- CI / build validation -->
                     <execution>
+                        <id>spotless-check</id>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -352,14 +353,14 @@
                     </executions>
                 </plugin>
                 <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>${maven.nexus.staging.plugin}</version>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>0.8.0</version>
                     <extensions>true</extensions>
                     <configuration>
-                        <serverId>ossrh</serverId>
-                        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                        <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                        <centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
+                        <publishingServerId>central</publishingServerId>
+                        <autoPublish>false</autoPublish>
                     </configuration>
                 </plugin>
                 <plugin>
