--- a/domino-brix-client/pom.xml
+++ b/domino-brix-client/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.dominokit</groupId>
         <artifactId>domino-brix</artifactId>
-        <version>1.0.0</version>
+        <version>HEAD-SNAPSHOT</version>
     </parent>
 
     <artifactId>domino-brix-client</artifactId>
